# quickmart2

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  deploy.sh  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  image_search.py  inference.py  load_master.py  main.py  pyproject.toml
db/: database.py
metadata-files/efficientnetv2_rw_m.agc_in1k/: image_data_features.pkl  image_features_vectors.idx
metadata-files/efficientnetv2_rw_s.ra2_in1k/: image_data_features.pkl  image_features_vectors.idx
metadata-files/vgg19/: image_data_features.pkl  image_features_vectors.idx
migrations/: 000_init_migation_tracking.sql  001_initial_design.sql  002_add_col_search_log.sql  003_add_col_item_found.sql  003_add_col_scaraped_image_url.sql  004_change_session_id_type_to_uuid_in_seach_log_table.sql  migrate.py  schema.sql
migrations/snapshots/: 000_init_migation_tracking.sql.snapshot.sql  001_initial_design.sql.snapshot.sql  002_add_col_search_log.sql.snapshot.sql  003_add_col_item_found.sql.snapshot.sql  003_add_col_scaraped_image_url.sql.snapshot.sql  004_change_session_id_type_to_uuid_in_seach_log_table.sql.snapshot.sql
nginx/: nginx.conf
schema/: schema.py
services/: db_services.py
static/favicon/: about.txt
static/js/: script.js
templates/: camera_modal.html  cart.html  cart_count_badge.html  contact_modal.html  index.html  result_fragment.html
templates/cart/: cart.html  checkout_modal.html
templates/products/: _product_list.html  products.html
templates/shared/: base.html
(+4 files in other folders)
